# Codantix

./: .gitignore  Dockerfile  PRD.md  README.md  codantix.config.json  makefile  pyproject.toml
.devcontainer/: devcontainer.json
codantix/: __init__.py  cli.py  config.py  doc_generator.py  documentation.py  embedding.py  git_integration.py  incremental_doc.py  parsers.py  utils.py
docs/source/: codantix.rst  conf.py  configuration.rst  index.rst  modules.rst  tutorials.rst  usage.rst
tests/: __init__.py  conftest.py  test_config.py  test_doc_generator.py  test_documentation.py  test_embedding.py  test_git_integration.py  test_incremental_doc.py  test_integration.py  test_openai_mocks.py  test_parsers.py  test_performance.py
